--- a/src/website/Home/components/OurDogs.css
+++ b/src/website/Home/components/OurDogs.css
@@ -8,7 +8,7 @@
 .home--dogs--title {
   align-self: center;
   margin-top: 40px;
-  font-size: 46px;
+  font-size: 42px;
   color: var(--black);
   border-bottom: 4px solid var(--red);
   padding-bottom: 10px;
@@ -52,14 +52,26 @@
   margin-left: -10px;
 }
 
+.home--dogs--see--more {
+  align-self: center;
+  text-decoration: none;
+  font-size: 20px;
+  margin-bottom: 40px;
+  font-weight: 500;
+  background-color: var(--black);
+  padding: 8px 16px;
+  border-radius: 10px;
+  color: white;
+}
+
 @media only screen and (max-width: 960px) {
   .home--dogs--title {
-    font-size: 44px;
+    font-size: 40px;
   }
 }
 
 @media only screen and (max-width: 768px) {
   .home--dogs--title {
-    font-size: 36px;
+    font-size: 34px;
   }
 }
